--- a/index.html
+++ b/index.html
@@ -230,19 +230,16 @@
     </div>
 
 
-        
-
-
-<div class="row negocios">
-    <div class="col-md-6"><img class="img-corbata" src="assets/img/negocios.png"></div>
-    <div class="col-md-6"><p>i</p></div>
-    
-</div>
 
 
 
+    <div class="row negocios">
+        <div class="col-md-6"><img class="img-corbata" src="assets/img/negocios.png"></div>
+        <div class="col-md-6">
+            <p>i</p>
+        </div>
 
-
+    </div>
 
 
 
@@ -253,6 +250,47 @@
 
 
 
+    <div class="container-fluid" style="background: #0179B8;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 my-5">
+                    <img src="assets/img/LOGO.png" alt="Logo Ferreaceros" class="mb-2">
+
+
+
+
+
+                </div>
+                <div class="col-md-5 my-5" style="color: white;">
+
+                    <p>Estamos ubicados en</p>
+                    <p>Chacabuco #2594, Valparaíso.</p>
+                    <p>📞 32 3371098 / 32 3372091</p>
+                    <p>📱 56 9 83990990</p>
+                    <p>✉ ventas@ferreaceros.cl</p>
+                </div>
+                <div class="col-md-5 my-5" style="color: white;">
+                    <h5>Ferreaceros - acerca de</h5>
+                    <p>Somos un equipo dedicado a mejorar constantemente para entregar el mejor servicio</p>
+                    <form style="display: flex;justify-content: space-between;align-items: center;">
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="su correo electrónico...">
+                        </div>
+                        <button type="submit" class="btn btn-primary">suscribirse</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+    <footer class="text-center mt-4 container" style="display: flex;justify-content: space-between;align-items: center;color: #707070;">
+        <p>© copyright 2023</p>
+        <p><a href="http://www.ferreaceros.cl">www.ferreaceros.cl</a> 2023</p>
+    </footer>
 
 
 
@@ -261,11 +299,10 @@
 
 
 
-
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 
 </body>
