--- a/index.html
+++ b/index.html
@@ -199,47 +199,98 @@
 
     <div class="row my-5 center">
 
-        <div class="col-md-3"><img src="assets/img/cuotas-6.png" style="width: 100%;"></div>
+        <div class="col-md-3"><img src="assets/img/cuotas-6.png" style="width: 80%;"></div>
 
-        <div class="col-md-3"><img src="assets/img/despacho-express.png" style="width: 100%;"></div>
+        <div class="col-md-3"><img src="assets/img/despacho-express.png" style="width: 80%;"></div>
 
-        <div class="col-md-3"><img src="assets/img/despacho-gratis.png" style="width: 100%;"></div>
+        <div class="col-md-3"><img src="assets/img/despacho-gratis.png" style="width: 80%;"></div>
 
-        <div class="col-md-3"><img src="assets/img/cuotas-12.png" style="width: 100%;"></div>
+        <div class="col-md-3"><img src="assets/img/cuotas-12.png" style="width: 80%;"></div>
 
     </div>
 
 
-    <h3 class="text-center t-2">¡OFERTAS POR TIEMPO LIMITADO!</h3>
 
+    <!--carrusel-->
 
-    <div class="carousel-container">
-        <div class="slider my-5">
-            <div class="slide-track d-flex">
-
-                <div class="slide"><img src="assets/img/n-1.png" class="slide-img" alt="Imagen 1"></div>
-                <div class="slide"><img src="assets/img/n-1.png" class="slide-img" alt="Imagen 2"></div>
-                <div class="slide"><img src="assets/img/n-1.png" class="slide-img" alt="Imagen 3"></div>
-                <div class="slide"><img src="assets/img/n-1.png" class="slide-img" alt="Imagen 4"></div>
-                <div class="slide"><img src="assets/img/n-1.png" class="slide-img" alt="Imagen 5"></div>
-                <div class="slide"><img src="assets/img/n-1.png" class="slide-img" alt="Imagen 6"></div>
-                <div class="slide"><img src="assets/img/n-1.png" class="slide-img" alt="Imagen 7"></div>
-
-            </div>
-        </div>
+    <div class="row">
+        <h3 class="text-center t-2">¡OFERTAS POR TIEMPO LIMITADO!</h3>
+        <img src="assets/img/carrusel-vr2.png">
     </div>
-
-
 
 
 
     <div class="row negocios">
+
         <div class="col-md-6"><img class="img-corbata" src="assets/img/negocios.png"></div>
+
         <div class="col-md-6">
-            <p>i</p>
+            <h2 class="n-cotizar">¿Necesitas cotizar un proyecto?</h2>
+        </div>
+    </div>
+
+    <div class="cotiza">
+        <h2>COTIZA TU CONTRUCCION EN METALCON SISTEMA MECANO</h2>
+    </div>
+
+
+    <div class="taco">
+
+        <div class="col-md-4">
+
+            <h4>¿En que consiste?</h4>
+            <p class="consiste">Se entregan todas las piezas cortadas a medida
+                con un manual de instrucciones de como instalar</p>
+        </div>
+
+        <div class="col-md-4">
+
+            <h4>Ventajas:</h4>
+            <p class="ventaja">Más rápido, más económico, más práctico,
+                no hay pérdidas, sólo te dedicas a instalar.</p>
+
+        </div>
+
+        <div class="col-md-4">
+
+            <button class="button-65" role="button">Enviar tu proyecto</button>
+
         </div>
 
     </div>
+
+    <!--comentarios-->
+
+    <div class="comentarios">
+
+        <div class="col-md-6">
+            <div class="saul">
+                <p>El cliente y sus requerimientos son lo más importante,
+                    por lo que estamos siempre buscando formas de poder ayudarle con sus proyectos,
+                    recomendándole materiales y métodos de construcción
+                    para que su experiencia en ferreaceros sea completamente satisfactoria...</p>
+                <img class="jimmy" src="assets/img/saulbuenhombre.jpg"><p>AAAAAA</p>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <div class="goodman">
+                <p>El cliente y sus requerimientos son lo más importante,
+                    por lo que estamos siempre buscando formas de poder ayudarle con sus proyectos,
+                    recomendándole materiales y métodos de construcción
+                    para que su experiencia en ferreaceros sea completamente satisfactoria...</p>
+                <img class="doc" src="assets/img/doctorcasa.jpg"><p>AAAAAA</p>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
 
 
 
@@ -287,7 +338,8 @@
 
 
 
-    <footer class="text-center mt-4 container" style="display: flex;justify-content: space-between;align-items: center;color: #707070;">
+    <footer class="text-center mt-4 container"
+        style="display: flex;justify-content: space-between;align-items: center;color: #707070;">
         <p>© copyright 2023</p>
         <p><a href="http://www.ferreaceros.cl">www.ferreaceros.cl</a> 2023</p>
     </footer>
